--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         </div>
         <hr>
         <div class="shadow p-4 mb-4 bg-info">
-            <h2 class="text-white display-4">Automatická sloupcová sazba</h1>
+            <h2 class="text-white display-4">Automatická sloupcová sazba</h2>
         </div>
 
         <div class="row">
@@ -151,7 +151,7 @@
         <div class="row">
             <div class="col-xs-12 col-sm-6 col-lg-3">
                 <div class="card text-left">
-                    <img class="card-img-top" src="img/vltava-small.jpg" alt="" class="img-responsive">
+                    <img src="img/vltava-small.jpg" alt="" class="img-responsive card-img-top">
                     <div class="card-body">
                         <h4 class="card-title">Vltava
                             <span class="badge badge-secondary">New</span>
