--- a/test/index.html
+++ b/test/index.html
@@ -53,6 +53,7 @@
         </div>
     </header>
     <main class="container">
+
         <form>
             <p class="alert alert-warning otazka">1. Jak se nazývá slavná listina vydaná v roce 1212?</p>
             <div class="form-group row">
@@ -85,7 +86,7 @@
             <div class="form-group row">
                 <label for="kral" class="col-md-2 col-form-label">Český král</label>
                 <div class="col-md-10">
-                    <select class="form-control" name="kral" id="kral">
+                    <select class="form-control" name="kral" id="kral" size="1">
                         <option>Přemysl Otakar I.</option>
                         <option>Přemysl Otakar II.</option>
                         <option selected>Václav II.</option>
